2003-01-28  Trey Matteson  <trey@apple.com>

	3158465 - REGRESSION: cursor turns into I-beam after clicking on most KWQ widgets

	When we return from handing a mousedown to an AK widget, we check to see if currentEvent
	is now a MouseUp, in which case we hand it to khtml.  This allows khtml to keep in
	synch as to the state of the mouse.  This covers the case of AK widgets that
	run their own event loop and consume events until a mouseup (but not ones that use
	Carbon, such as PopUpList, since Carbon does not update currentEvent).

        Reviewed by Darin.

        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::passWidgetMouseDownEventToWidget):  Pass mouseup to khtml.

2003-01-28  Trey Matteson  <trey@apple.com>

	2940179 - Arrow cursor should change to link cursor after click of link in non-frontmost window

	3158238 - cursor shape does not track after double-click to activate a window

        Reviewed by Darin.

        * khtml/khtmlview.cpp:
        (KHTMLView::viewportMouseDoubleClickEvent):  We get this when the mouse
	goes up the second time, so clear d->mousePressed.
        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::mouseMoved):  Pitch any mousemoved that comes through while
	we think the mouse is down.  Those screw up our tracking, like 3137661.  This is
	part of the 2940179 fix.

2003-01-27  Trey Matteson  <trey@apple.com>

	3157146 REGRESSION: using a pop-up menu turns the cursor into an I-beam

 	A hack for the benefit of AK's PopUpButton, which uses the Carbon menu
	manager, which thus eats all subsequent events after it is starts its
	modal tracking loop.  After the interaction is done, we call a new routine
	to fix things up in the khtml event world.  We post a fake mouse up to balance
	the mouse down we started with.  In addition, we post a fake mouseMoved to get
	the cursor in sync with whatever we happen to be over after the tracking is done.

        Reviewed by Darin.

        * kwq/KWQComboBox.mm: